# source-to-websocket

./: .gitignore  CMakeLists.txt  README.md  buildspec.json
.github/scripts/: package-macos
.github/workflows/: build-project.yaml  push.yaml
data/: fft_test.html  frame_test.html  text_test.html
src/: source-to-websocket.cpp  source-to-websocket.hpp
